source/blender/blenloader/intern/versioning_270.c
@@ -920,7 +920,7 @@ void blo_do_versions_270(FileData *fd, Library *UNUSED(lib), Main *main)
 
 	}
 
-	{
+	if (!MAIN_VERSION_ATLEAST(main, 276, 3)) {
 		if (!DNA_struct_elem_find(fd->filesdna, "RenderData", "CurveMapping", "mblur_shutter_curve")) {
 			Scene *scene;
 			for (scene = main->scene.first; scene != NULL; scene = scene->id.next) {
